# pyMyRedditBackup

./: .gitignore  LICENSE  README.md  praw.ini  pyproject.toml  tox.ini
.github/workflows/: tox.yml
pymyredditbackup/: __init__.py  pymyredditbackup.py
