[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pymyredditbackup"
version = "0.0.1"
description = ""
authors = ["James Lewellyn <styyle14@gmail.com>"]
maintainers = ["James Lewellyn <styyle14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3"
pytest = "^4.6"
