[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pymyredditbackup"
version = "0.0.1"
description = ""
authors = ["James Lewellyn <styyle14@gmail.com>"]
maintainers = ["James Lewellyn <styyle14@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
pymyredditbackup = 'pymyredditbackup.pymyredditbackup:main'

[tool.poetry.dependencies]
python = "^3.7"
praw = "^6.5"
prawcore = "*"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
cohesion = "*"
flake8 = "^3"
flake8-2020 = "*"
flake8-alfred = "*"
flake8-annotations = "*"
flake8-annotations-complexity = "*"
flake8-annotations-coverage = "*"
flake8-black = "*"
flake8-blind-except = "*"
flake8-broken-line = "*"
flake8-builtins = "*"
flake8-bugbear = "*"
flake8-commas = "*"
flake8-docstrings = "*"
flake8-fixme = "*"
flake8-import-order = "*"
flake8-import-style = "*"
flake8-logging-format = "*" 
flake8-mutable = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-quotes = "*"
flake8-string-format = "*"
flake8-typing-imports = "*"
pep8-naming = "*"
pytest = "^4.6"

[tool.black]
line-length = 120
